(chore): some styles added [DEV-7]

--- a/style.css
+++ b/style.css
@@ -1,16 +1,13 @@
-* {
-  all: unset;
-}
-* {
-  all: unset;
-}
-* {
-  all: unset;
-}
-* {
-  all: unset;
-}
 
+body {
+  display: none;
+}
+body {
+  display: none;
+}
+body {
+  display: none;
+}
 body {
   display: none;
 }
