(feat): some commit to add some changes [DEV-7]

--- a/style.css
+++ b/style.css
@@ -1,19 +1,5 @@
-
-body {
-  display: none;
-}
-body {
-  display: none;
-}
-body {
-  display: none;
-}
-body {
-  display: none;
-}aasda
+asdasda
 solidcolorasd
-asidedas
+asideas
 dataasd
-asda
-solidcoloras
-dad
+asided
